<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rideback"
    tools:context=".Signup">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <EditText
            android:id="@+id/fname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/firstname"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <EditText
            android:id="@+id/lname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/lastname"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            />
        <!-- Email label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="roll no."
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <EditText
            android:id="@+id/roll"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="roll no."
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/signbutton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="@string/signupbutton"
            android:textSize="20sp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"/>

    </LinearLayout>
</ScrollView>